<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tutoo</string>
    <string name="hello_world">Hello world!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_logo_content_description">Logo</string>
    <string name="profile_title_logged_in">Your are logged in as</string>
    <string name="profile_title_not_logged_in"></string>
    <string name="profile_title_logged_out">You have logged out</string>
    <string name="profile_login_button_label">Log in</string>
    <string name="profile_logout_button_label">Log out</string>
    <string name="profile_signup_button_label">Sign Up</string>
    <string name="menu_posts"> Posts </string>
    <string name="menu_profile"> Profile </string>

    <!-- Menu display names for the activities -->
    <string name="action_settings">Settings</string>
    <string name="action_notification">Notifications</string>
    <string name="action_search">Search</string>
    <string name="action_profile">Profile</string>
    <string name="action_new_post">Make a Post</string>
    <string name="action_match">Matching</string>
    <string name="action_feed">Home</string>
    <string name="action_browse">Browse</string>

    <!-- Title displays on the activity -->
    <string name="title_activity_main">Home</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="title_activity_viewpost">Post</string>
    <string name="title_activity_newpost">New Post</string>
    <string name="title_activity_editpost">Edit Post</string>
    <string name="title_activity_listpost">Posts</string>
    <string name="title_activity_editprofile">Edit Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_list_category">Browse</string>

    <string name="title_frag_view_post">Post</string>
    <string name="title_frag_notification">Notification</string>
    <string name="title_frag_category">Service</string>
    <string name="title_frag_markets">Markets</string>

    <string name="selectTypePrompt">select type</string>

    <string name="search_hint">javascript</string>
    <string name="category1">All</string>
    <string name="category2">Interview</string>
    <string name="category3">CS</string>
    <string name="category4">Math</string>
    <string name="category5">Other</string>

    <string name="spinnerItem1Services">Services</string>
    <string name="spinnerItem2Markets">Markets</string>
    <string name="facebook_app_id">944237372260549</string>
    <string name="parse_app_id">3ejQC7KuCGG0X5Hhutq425jILxPPnqPsGvAi8PBl</string>
    <string name="parse_client_key">vbcon8StYQYTCDXVicoxHD2PEfpJponaveLgeoHW</string>
    <string name="pick_time">Select Time</string>
    <string name="pick_date">Select Date</string>
    <string name="navigation_menu_title">Tutoo</string>
    <string name="open_content_desc">Open Menu</string>
    <string name="close_content_desc">Close Menu</string>
    <string name="action_edit_profile">Edit Profile</string>
</resources>
