<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tutoo="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        tutoo:showAsAction="ifRoom"/>
    <item android:id="@+id/action_newpost"
        android:icon="@drawable/ic_action_new_event"
        android:title="@string/action_new_post"
        tutoo:showAsAction="ifRoom"/>
    <item android:id="@+id/action_profile"
        android:icon="@drawable/ic_action_person"
        android:title="@string/action_profile"
        tutoo:showAsAction="ifRoom"/>
    <item android:id="@+id/action_match"
        android:icon="@drawable/match"
        android:title="@string/action_match"
        tutoo:showAsAction="ifRoom"/>
</menu>
