<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.parse.tutoo.view.BaseActivity">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:icon="@drawable/ic_action_person"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_match"
        android:title="@string/action_match"
        android:icon="@drawable/match"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
